--- a/Beautifill/Beautifill/Beautifill.csproj
+++ b/Beautifill/Beautifill/Beautifill.csproj
@@ -210,6 +210,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\jquery-1.9.1.min.js" />
+    <Content Include="Content\jquery.superscrollorama.js" />
+    <Content Include="Content\scripts.js" />
+    <Content Include="Content\TweenMax.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
