--- a/Beautifill/Beautifill/Beautifill.csproj
+++ b/Beautifill/Beautifill/Beautifill.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\animation.gsap.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\jquery-1.9.1.min.js" />
